tools/kafka/start/config/kafka-broker.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  labels:
    app: kafka-broker
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    protocol: TCP
    name: kafka-broker
  selector:
    app: kafka-broker

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
spec:
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
        - name: broker
          image: confluentinc/cp-kafka:7.0.1
          ports:
            - containerPort: 9092
