tools/kafka/start/config/kafka-zookeper.deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-zookeeper
  labels:
    app: kafka-zookeeper
spec:
  type: ClusterIP
  ports:
    - port: 2181
      targetPort: 2181
      protocol: TCP
  selector:
    app: kafka-zookeeper

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-zookeeper
spec:
  selector:
    matchLabels:
      app: kafka-zookeeper
  template:
    metadata:
      labels:
        app: kafka-zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.0.1
        ports:
        - containerPort: 2181
